Fix docker group id

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,9 +1,13 @@
 FROM jenkins/jenkins:lts-jdk11
 
+# Require docker group id as input arg
+ARG DOCKER_GROUP_ID
+RUN test -n "$DOCKER_GROUP_ID" || (echo "DOCKER_GROUP_ID not set" && false)
+
 # Create docker group and add jenkins
 # Allows for running docker w/o sudo
 USER root
-RUN groupadd -g 999 docker
+RUN groupadd -g $DOCKER_GROUP_ID docker
 RUN usermod -aG docker jenkins
 USER jenkins
 
